--- a/petclinic/templates/base.html
+++ b/petclinic/templates/base.html
@@ -56,7 +56,7 @@
                         <button class="text-white hover:bg-indigo-700 px-3 py-2 rounded transition duration-200">Dashboard</button>
                         <button class="text-white hover:bg-indigo-700 px-3 py-2 rounded transition duration-200 ml-4">Manajemen Obat</button>
                         <button class="text-white hover:bg-indigo-700 px-3 py-2 rounded transition duration-200 ml-4">Manajemen Jenis Perawatan</button>
-                        <button class="text-white hover:bg-indigo-700 px-3 py-2 rounded transition duration-200 ml-4">Manajemen Vaksin</button>
+                        <button class="text-white hover:bg-indigo-700 px-3 py-2 rounded transition duration-200 ml-4">Manajemen Vacsin</button>
                         <button class="text-white hover:bg-indigo-700 px-3 py-2 rounded transition duration-200 ml-4">Logout</button>
                     </div>
                 </template>
