--- a/authentication/templates/index.html
+++ b/authentication/templates/index.html
@@ -40,8 +40,8 @@
     <h1>Pet Clinic - E13</h1>
     
     <div class="button-container">
-        <a href="login.html" class="button">Login</a>
-        <a href="register_type.html" class="button">Register</a>
+        <a href="{% url 'login' %}" class="button">Login</a>
+        <a href="{% url 'register_type' %}" class="button">Register</a>
     </div>
 </body>
 </html>
