--- a/authentication/templates/register_type.html
+++ b/authentication/templates/register_type.html
@@ -48,7 +48,7 @@
         <div class="type-column">
             <h2>Pegawai</h2>
             <div class="type-option" onclick="location.href='{% url 'register_frontdesk' %}'">Front-Desk Officer</div>
-            <div class="type-option" onclick="location.href='{% url 'register_veterinarian' %}'">Dokter Hewan</div>
+            <div class="type-option" onclick="location.href='{% url 'register_vet' %}'">Dokter Hewan</div>
             <div class="type-option" onclick="location.href='{% url 'register_nurse' %}'">Perawat Hewan</div>
         </div>
         
